--- a/index.html
+++ b/index.html
@@ -36,45 +36,52 @@
             open the door.
           </div>
           <div class="input-button">
-            <div> <img src="./assets/Oval.svg" alt=""> What would you like to do?</div>
-            <div> <img src="./assets/Oval.svg" alt=""> Where would you like to go?</div>
+            <div>
+              <img src="./assets/Oval.svg" alt="" /> What would you like to do?
+            </div>
+            <div>
+              <img src="./assets/Oval.svg" alt="" /> Where would you like to go?
+            </div>
             <button>SEARCH</button>
           </div>
         </div>
       </div>
     </div>
-  
-  <div class="card-section">
-    <div class="card-header">Benefits of Odigo</div>
-    <div class="card-boxes">
-      <div class="card-one">
-        <img src="./assets/Icon (3).svg" alt="">
-        <div>Welcome to Odigo!</div>
-        <text>
-        Jump off balcony, onto stranger's head.
-        Chase ball of string hide when guests come over.
-        </text>
-        <p>LEARN MORE <img src="./assets/Shape.svg" alt=""></p>
-      </div>
-      <div class="card-two">
-        <img src="./assets/Icon (4).svg" alt="">
-        <div>Your Personal Japan Guide</div>
-        <text>
-          Jump off balcony, onto stranger's head.
-          Chase ball of string hide when guests come over.
-          </text>
-          <p>LEARN MORE <img src="./assets/Shape.svg" alt=""></p>
-      </div>
-      <div class="card-three">
-        <img src="./assets/Icon (5).svg" alt="">
-        <div>Promoting Local Businesses</div>
-        <text>
-          Jump off balcony, onto stranger's head.
-          Chase ball of string hide when guests come over.
-          </text>
-          <p>LEARN MORE <img src="./assets/Shape.svg" alt=""></p>
+    <div class="second-part">
+      <div class="card-section">
+        <div class="container">
+          <div class="card-header">Benefits of Odigo</div>
+          <div class="card-boxes">
+            <div class="card-one">
+              <img src="./assets/Icon (3).svg" alt="" />
+              <div>Welcome to Odigo!</div>
+              <text>
+                Jump off balcony, onto stranger's head. Chase ball of string
+                hide when guests come over.
+              </text>
+              <p>LEARN MORE <img src="./assets/Shape.svg" alt="" /></p>
+            </div>
+            <div class="card-two">
+              <img src="./assets/Icon (4).svg" alt="" />
+              <div>Your Personal Japan Guide</div>
+              <text>
+                Jump off balcony, onto stranger's head. Chase ball of string
+                hide when guests come over.
+              </text>
+              <p>LEARN MORE <img src="./assets/Shape.svg" alt="" /></p>
+            </div>
+            <div class="card-three">
+              <img src="./assets/Icon (5).svg" alt="" />
+              <div>Promoting Local Businesses</div>
+              <text>
+                Jump off balcony, onto stranger's head. Chase ball of string
+                hide when guests come over.
+              </text>
+              <p>LEARN MORE <img src="./assets/Shape.svg" alt="" /></p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
   </body>
 </html>
